--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,25 @@
-﻿@{
+﻿@model ScroogeCrypto.Models.CryptoDateModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@ViewBag.d
+
+@using (Html.BeginForm("GetCrypto", "Home", FormMethod.Post))
+{
+    <div>
+        <h1 class="display-4">Scrooge's Crypto </h1>
+            <div class="form-group">
+                <label asp-for="EndDate">Start Date</label>
+                <input asp-for="StartDate" type="date" class="form-control input-validation-error" id="startDate">
+                <span asp-validation-for="StartDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="EndDate">End Date</label>
+                <input asp-for="EndDate" type="date" class="form-control input-validation-error" id="endDate">
+                <span asp-validation-for="EndDate" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        
+    </div>
+}
