--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,18 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.fixedBottomRight {
+    position: fixed;
+    overflow: hidden;
+    bottom: -212px;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    right: -55px;
+    z-index: 1000;
+}
+@media only screen and (max-width: 530px) {
+    .fixedBottomRight {
+        display: none;
+    }
+}
