--- a/Views/Home/GetCrypto.cshtml
+++ b/Views/Home/GetCrypto.cshtml
@@ -75,7 +75,7 @@ else
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Date)
+                                @Convert.ToDateTime(item.Date).ToString("dd.MM.yyyy HH:mm:ss")
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Price) €
